# globfit

./: CMakeLists.txt  ColorMap.cpp  ColorMap.h  EqualityAlignment.cpp  GlobFit.cpp  GlobFit.sln  GlobFit.vcxproj  GlobFit.vcxproj.filters  OrientationAlignment.cpp  ProjectHome.md  README.md  RelationGraph.h  RelationVertex.h  Solver.cpp  Types.h  Viewer.h
include/: GlobFit.h
matlab/: OptimizeNormal.m
src/: EqualityAlignment.cpp  GlobFit.cpp  OrientationAlignment.cpp  PlacementAlignment.cpp  Primitive.cpp  Relation.cpp  Solver.cpp  Viewer.cpp  main.cpp
